Bug Fix: fix head close tag

--- a/test-js/test.html
+++ b/test-js/test.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8">
     <script src="test.js"></script>
-<head>
+</head>
 <body>
     <h1>Acesta este testul lui Radu</h1>
     <button onclick="executa();">Executa Programul</button>
