Test 1: Headings and Tables

--- a/proiect-html/test1.html
+++ b/proiect-html/test1.html
@@ -51,7 +51,7 @@
 <h3>This is H3</h2>
 <table border="1" cellpadding="4" width="550">
 	<tr><!-- table row -->
-		<td width="30%">Column 1.1</td> <!-- table column -->
+		<td width="200">Column 1.1</td> <!-- table column -->
 		<td>Column 1.2</td>	<!-- table column -->
 	</tr>
 	<tr> <!-- table row -->
@@ -62,7 +62,7 @@
 <br><! -- new line -->
 <table cellpadding="4" style="width:550px; border: 1px solid #ECECEC;">
 	<tr><!-- table row -->
-		<td width="30%" style="border: 1px solid #ECECEC;">Column 1.1</td> <!-- table column -->
+		<td width="200" style="border: 1px solid #ECECEC;">Column 1.1</td> <!-- table column -->
 		<td style="border: 1px solid #ECECEC;">Column 1.2</td>	<!-- table column -->
 	</tr>
 	<tr> <!-- table row -->
@@ -73,7 +73,7 @@
 <br> <!-- new line -->
 <table class="myTable" cellpadding="4">
 	<tr><!-- table row -->
-		<td width="30%">Column 1.1</td> <!-- table column -->
+		<td width="200">Column 1.1</td> <!-- table column -->
 		<td>Column 1.2</td>	<!-- table column -->
 	</tr>
 	<tr> <!-- table row -->
@@ -92,11 +92,18 @@
 </div>
 <br> <!-- new line -->
 <div class="container2" title="Container Two" style="background:#DDEEFF;">
-	<div class="myDiv1">
+	<div class="myDiv1" style="width:200px;">
 		My Div three
 	</div>
-	<div class="myDiv1">
+	<div class="myDiv1" style="width:350px;">
 		My Div four
+	</div>
+	<br> <!-- new line -->
+	<div class="myDiv1" style="width:200px;">
+		My Div five
+	</div>
+	<div class="myDiv1" style="width:350px;">
+		My Div six
 	</div>
 </div>
 </body>
