--- a/proiect-html/project/area-calculator.html
+++ b/proiect-html/project/area-calculator.html
@@ -13,22 +13,25 @@
 <body>
 <!-- navigation menu -->
  <div class="w3-bar w3-green">
-  <a href="#" class="w3-bar-item w3-button">Home</a>
-  <a href="area-calculator.html" class="w3-bar-item w3-button">Area Calculator</a>
+  <a href="index.html" class="w3-bar-item w3-button">Home</a>
+  <a href="#" class="w3-bar-item w3-button">Area Calculator</a>
 </div>
 <br>
 <!-- page layout: 2 columns -->
 <div class="w3-row">
   <div class="w3-col w3-container m8 l9"><!-- column one -->
 	<div class="area-main">
-  		<h1>Project: HTML Area Calculator</h1>
-  		<br>
-		<img src="img/logo.png" alt="Logo" title="Logo" width="300">
+		<h2>Area Calculator</h2>
 	</div>
   </div>
   <div class="w3-col w3-container m4 l3 w3-grey"><!-- column two -->
-		<h3>Author: Radu Alexandru Ilies</h3>
-		<h5>License: GPLv3</h5>
+  		<h4>Project: HTML Area Calculator</h4>
+  		<br>
+		<div style="text-align:center;">
+			<img src="img/logo.png" alt="Logo" title="Logo" width="150"> <!-- resized to 50% -->
+		</div>
+		<br>
+		<br>
   </div>
 </div>
 
