Test 1: Area Calc

--- a/proiect-html/project/area-calculator.html
+++ b/proiect-html/project/area-calculator.html
@@ -12,10 +12,16 @@
 </head>
 <body>
 <!-- navigation menu -->
- <div class="w3-bar w3-green">
-  <a href="index.html" class="w3-bar-item w3-button">Home</a>
-  <a href="#" class="w3-bar-item w3-button">Area Calculator</a>
+  <div class="w3-bar w3-green">
+	<a href="#" class="w3-bar-item w3-button">Home</a>
+	<div class="w3-dropdown-hover">
+  		<button class="w3-button">Area Calculator</button>
+  		<div class="w3-dropdown-content w3-bar-block w3-card-4">
+  			<a href="area-calculator-triangle.html" class="w3-bar-item w3-button">Area Calculator - Triangle</a>
+		</div>
+	</div>
 </div>
+<br>
 <br>
 <!-- page layout: 2 columns -->
 <div class="w3-row">
