--- a/proiect-html/project/index.html
+++ b/proiect-html/project/index.html
@@ -13,8 +13,13 @@
 <body>
 <!-- navigation menu -->
  <div class="w3-bar w3-green">
-  <a href="#" class="w3-bar-item w3-button">Home</a>
-  <a href="area-calculator.html" class="w3-bar-item w3-button">Area Calculator</a>
+	<a href="#" class="w3-bar-item w3-button">Home</a>
+	<div class="w3-dropdown-hover">
+  		<button class="w3-button">Area Calculator</button>
+  		<div class="w3-dropdown-content w3-bar-block w3-card-4">
+  			<a href="area-calculator-triangle.html" class="w3-bar-item w3-button">Area Calculator - Triangle</a>
+		</div>
+	</div>
 </div>
 <br>
 <!-- page layout: 2 columns -->
@@ -29,6 +34,19 @@
   <div class="w3-col w3-container m4 l3 w3-grey"><!-- column two -->
 		<h3>Author: Radu Alexandru Ilies</h3>
 		<h5>License: GPLv3</h5>
+		<br>
+		<br>
+		Info: This project is using the following OpenSource components:
+			<ul>
+				<li>
+					<a href="https://www.w3schools.com/w3css/" target="_blank">w3.css UI Toolkit</a>
+				</li>
+				<li>
+					<a href="https://github.com/unix-world/Smart.Framework.Modules/blob/master/mod-js-components/views/js/jswidgets/area-calculator.js" target="_blank">JS Area Calculator</a>
+				</li>
+			</ul>
+	  <br>
+	  <br>
   </div>
 </div>
 
