Test 1: Area Calc: OK

--- a/proiect-html/project/index.html
+++ b/proiect-html/project/index.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8">
     <title>My 1st HTML Project - Radu Alexandru Ilies</title>
     <link rel="stylesheet" href="css/w3.css">
+    <!-- area-calculator.js is NOT REQUIRED here -->
     <style>
     .area-main {
 		text-align: left;    
@@ -22,18 +23,18 @@
 	</div>
 </div>
 <br>
-<!-- page layout: 2 columns -->
+<!-- page layout grid with 12 columns: 2 areas (8 columns / 4 columns) -->
 <div class="w3-row">
-  <div class="w3-col w3-container m8 l9"><!-- column one -->
+  <div class="w3-col w3-container m8 l8"><!-- column one -->
 	<div class="area-main">
   		<h1>Project: HTML Area Calculator</h1>
   		<br>
 		<img src="img/logo.png" alt="Logo" title="Logo" width="300">
 	</div>
   </div>
-  <div class="w3-col w3-container m4 l3 w3-grey"><!-- column two -->
+  <div class="w3-col w3-container m4 l4 w3-light-grey"><!-- column two -->
 		<h3>Author: Radu Alexandru Ilies</h3>
-		<h5>License: GPLv3</h5>
+		<h5>License: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GPLv3</a></h5>
 		<br>
 		<br>
 		Info: This project is using the following OpenSource components:
@@ -49,6 +50,8 @@
 	  <br>
   </div>
 </div>
-
+<br>
+<hr>
+<br>
 </body>
 </html>
