--- a/proiect-html/project/index.html
+++ b/proiect-html/project/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
      <meta charset="UTF-8">
-    <title>My 1st HTML Project - Radu Alexandru Ilies</title>
+    <title>Geometry: Area Calculator</title>
     <link rel="stylesheet" href="css/w3.css">
     <!-- area-calculator.js is NOT REQUIRED here -->
     <style>
