--- a/proiect-html/project/area-calculator-triangle.html
+++ b/proiect-html/project/area-calculator-triangle.html
@@ -2,7 +2,7 @@
 <html>
 <head>
      <meta charset="UTF-8">
-    <title>My 1st HTML Project - Radu Alexandru Ilies</title>
+    <title>Geometry: Area Calculator - Triangle</title>
     <link rel="stylesheet" href="css/w3.css">
     <script type="text/javascript" src="js/area-calculator.js"></script>
     <style>
@@ -75,14 +75,9 @@ function calculateTriangleAreaBH() {
 	var base = document.getElementById('bh-base').value;
 	var height = document.getElementById('bh-height').value;
 	//-- calculate
-	var result = Math.round(100 * (parseFloat(height) * parseFloat(base) / 2)) / 100;
-	var html = '<div align="right"><font color="#003399"><b>Area of TRIANGLE:</b></font> <font color="#778899"><b><i>[H='+height+' ; B='+parseFloat(base)+']</i></b></font> = <font color="#FF6600"><b>'+parseFloat(result)+'</b></font></div><hr>';
+	var calc = calculateGeometryArea('triangle-bs', {base:base, height:height});
 	//-- display
-	if((result <= 0) || isNaN(result)) {
-		alert('Area is Zero or Impossible !');
-	} else {
-		document.getElementById('result-calculate').innerHTML += html;
-	} //end if
+	document.getElementById('result-calculate').innerHTML += calc.html;
 }
 function calculateTriangleAreaHeron() {
 	//-- read values from form fields
