--- a/proiect-html/project/index.html
+++ b/proiect-html/project/index.html
@@ -1,57 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <meta charset="UTF-8">
-    <title>Geometry: Area Calculator</title>
-    <link rel="stylesheet" href="css/w3.css">
-    <!-- area-calculator.js is NOT REQUIRED here -->
-    <style>
-    .area-main {
-		text-align: left;    
-    }
-    </style>
+	<meta charset="UTF-8">
+	<title>Home</title>
+	<link rel="stylesheet" href="fonts/exo2.css">
+	<style>
+	* {
+		font-family: 'Exo 2',arial,sans-serif;
+		font-smooth: always;
+	}
+	</style>
+	<link rel="stylesheet" href="css/w3.css">
+	<style>
+	.area-main {
+		text-align: left;
+	}
+	p {
+		text-align: justify;
+	}
+	</style>
+	<script src="js/jquery/jquery.js" type="text/javascript"></script>
+	<script src="js/cycle2/jquery.cycle2.js" type="text/javascript"></script>
 </head>
 <body>
-<!-- navigation menu -->
- <div class="w3-bar w3-green">
+<!-- navigation menu: home -->
+<div class="w3-bar w3-green">
 	<a href="#" class="w3-bar-item w3-button">Home</a>
+	<a href="about-us.html" class="w3-bar-item w3-button">About us</a>
+	<a href="blog.html" class="w3-bar-item w3-button">Blog</a>
 	<div class="w3-dropdown-hover">
-  		<button class="w3-button">Area Calculator</button>
-  		<div class="w3-dropdown-content w3-bar-block w3-card-4">
-  			<a href="area-calculator-triangle.html" class="w3-bar-item w3-button">Area Calculator - Triangle</a>
+		<button class="w3-button">Learning resources</button>
+		<div class="w3-dropdown-content w3-bar-block w3-card-4">
+			<a href="learning-res-geometry-area.html" class="w3-bar-item w3-button">Geometry: Area Calculator</a>
 		</div>
 	</div>
+	<a href="copyright.html" class="w3-bar-item w3-button">Copyright</a>
 </div>
 <br>
-<!-- page layout grid with 12 columns: 2 areas (8 columns / 4 columns) -->
+<!-- page layout grid with 12 columns: 2 areas (6 columns / 6 columns) -->
 <div class="w3-row">
-  <div class="w3-col w3-container m8 l8"><!-- column one -->
+  <div class="w3-col w3-container m6 l6"><!-- column one -->
 	<div class="area-main">
-  		<h1>Project: HTML Area Calculator</h1>
-  		<br>
-		<img src="img/logo.png" alt="Logo" title="Logo" width="300">
+		<h1 style="display:inline; font-weight:bold;">Welcome to our class website !</h1>
+		<br>
+		<br>
+		<h3>We learn in a very modern school, located in Cluj-Napoca.</h3>
+		<p>
+			The layout, design and decor of the classroom has a significant effect upon the quality of the educational experience.
+			Attention to the acoustics and colour scheme may reduce distractions and aid concentration.
+			The lighting and furniture likewise influence factors such as student attention span.
+			<sup><a title="ClassRoom, Wikipedia" href="https://en.wikipedia.org/wiki/Classroom" target="_blank">[1]</a></sup>
+		</p>
+		<p>
+			The acoustics of the classroom are very often overlooked, but are an important part of the success of a child.
+			Choosing only materials that cause sound to reverberate, such as tile floors and hard wall surfaces, greatly increases noise levels and can prove detrimental to learning.
+			One study of hyperactive versus control groups of children found that white noise has no impact on either group, but that auditory stimulation such as distant conversations or music has a negative effect on both groups of students.
+			<sup><a title="ClassRoom, Wikipedia" href="https://en.wikipedia.org/wiki/Classroom" target="_blank">[2]</a></sup>
+		</p>
+		<p>
+			Online learning technologies make it possible for learning to take place at any time, at any place, and at any pace that the learner desires.
+			This is particularly important for adult students who may need to schedule their learning around work and parenting responsibilities.
+			<sup><a title="ClassRoom, Wikipedia" href="https://en.wikipedia.org/wiki/Classroom" target="_blank">[3]</a></sup>
+		</p>
+		<p>
+			To learn more about classrooms visit <a href="https://en.wikipedia.org/" target="_blank">Wikipedia</a>.
+		</p>
 	</div>
   </div>
-  <div class="w3-col w3-container m4 l4 w3-light-grey"><!-- column two -->
-		<h3>Author: Radu Alexandru Ilies</h3>
-		<h5>License: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GPLv3</a></h5>
-		<br>
-		<br>
-		Info: This project is using the following OpenSource components:
-			<ul>
-				<li>
-					<a href="https://www.w3schools.com/w3css/" target="_blank">w3.css UI Toolkit</a>
-				</li>
-				<li>
-					<a href="https://github.com/unix-world/Smart.Framework.Modules/blob/master/mod-js-components/views/js/jswidgets/area-calculator.js" target="_blank">JS Area Calculator</a>
-				</li>
-			</ul>
-	  <br>
-	  <br>
+  <div class="w3-col w3-container m6 l6"><!-- column two -->
+	<br>
+	<div class="cycle-slideshow" data-cycle-fx="fade" data-cycle-timeout="2000" title="Images Slideshow">
+		<img width="99%" src="img/classroom-1.jpg" alt="Classroom Image 1" title="Classroom Image 1"><br>
+		<img width="99%" src="img/classroom-2.jpg" alt="Classroom Image 2" title="Classroom Image 2" style="display:none;"><br>
+		<img width="99%" src="img/classroom-3.jpg" alt="Classroom Image 3" title="Classroom Image 3" style="display:none;"><br>
+	</div>
   </div>
 </div>
 <br>
-<hr>
 <br>
 </body>
 </html>
