--- a/proiect-html/project/about-us.html
+++ b/proiect-html/project/about-us.html
@@ -31,7 +31,7 @@
 				damping: 0.65,
 				timeperiod: 10,
 				wallrepulse: 0.5,
-				mapArea: { left: 0, top: 150, x: -1, y: -1 },
+				mapArea: { left: 0, top: 155, x: -1, y: -1 },
 				canvasError: 'alert',
 				minSpeed: 0.05,
 				maxForce: 0.1,
@@ -44,7 +44,7 @@
 	</script>
 </head>
 <body>
-<!-- navigation menu: home -->
+<!-- navigation menu: about us -->
 <div class="w3-bar w3-blue-gray">
 	<a href="index.html" class="w3-bar-item w3-button">Home</a>
 	<a href="#" class="w3-bar-item w3-button">About us</a>
@@ -57,8 +57,7 @@
 	</div>
 	<a href="copyright.html" class="w3-bar-item w3-button">Copyright</a>
 </div>
-<br>
-<div align="center"><h1 style="display:inline;">The students in our class</h1></div>
+<div align="center"><h1 style="display:inline;">The students in our class, 2017</h1></div>
 <div id="my-classroom" style="width:100%; height:80vh; overflow:hidden; display:none;">
 <ul>
 	<li><a href="#">VIII-A Class, CNER</a>
