--- a/proiect-html/project/copyright.html
+++ b/proiect-html/project/copyright.html
@@ -33,17 +33,18 @@
 </div>
 <br>
 <!-- page layout grid with 12 columns: 2 areas (8 columns / 4 columns) -->
-<div class="w3-row">
+<div class="w3-row" style="margin-left:25px; margin-right:25px;">
   <div class="w3-col w3-container m8 l8"><!-- column one -->
 	<div class="area-main">
-  		<h1>Project: My Class Website</h1>
+  		<h1>Project: <b>My Class Website</b></h1>
+  		<h2>Course: <b>Informatics</b></h2>
   		<br>
 		<img src="img/logo.png" alt="Logo" title="Logo" width="300">
 	</div>
   </div>
-  <div class="w3-col w3-container m4 l4 w3-yellow"><!-- column two -->
-	<h3>Author: (c) 2017 Radu Alexandru Ilieș</h3>
-	<h5>License: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GPLv3</a>, OpenSource</h5>
+  <div class="w3-col w3-container m4 l4 w3-yellow" style="min-height:80vh;"><!-- column two -->
+	<h4>Author: <b>(c) 2017 Radu Alexandru Ilieș</b></h4>
+	<h5>License: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank"><b>GPLv3</b></a>, <b>OpenSource</b></h5>
 	<br>
 	<strong>Info:</strong> This project is using the following OpenSource components:
 	<ul>
