--- a/proiect-html/project/index.html
+++ b/proiect-html/project/index.html
@@ -38,13 +38,13 @@
 </div>
 <br>
 <!-- page layout grid with 12 columns: 2 areas (6 columns / 6 columns) -->
-<div class="w3-row">
+<div class="w3-row" style="margin-left:25px; margin-right:25px;">
   <div class="w3-col w3-container m6 l6"><!-- column one -->
 	<div class="area-main">
 		<h1 style="display:inline; font-weight:bold;">Welcome to our class website !</h1>
 		<br>
 		<br>
-		<h3>We learn in a very modern school, located in Cluj-Napoca.</h3>
+		<h3>We learn in a very modern school</h3>
 		<p>
 			The layout, design and decor of the classroom has a significant effect upon the quality of the educational experience.
 			Attention to the acoustics and colour scheme may reduce distractions and aid concentration.
