--- a/proiect-html/project/blog.html
+++ b/proiect-html/project/blog.html
@@ -45,7 +45,7 @@
 	<div class="area-main">
   		<h1 style="font-weight:bold;">Blog</h1>
   		<br>
-
+  		<!-- blog entry -->
 		<h2 style="display:inline;">Fri, 26th May, 2017: <b>Just one month to the exam</b></h2>
 		<p>
 			We are learning, ... and learning ... but waiting the final party on 09th June ;)  !!! ... and of course for the exams: 19th and 21th June !
@@ -106,7 +106,23 @@
 				<td>25 June</td>
 			</tr>
 		</table>
-
+		<br>
+		<br>
+		<br>
+  		<!-- blog entry -->
+		<h2 style="display:inline;">Tue, 23th May, 2017: <b>Starting website refactoring</b></h2>
+		<p>
+			As the requirements for this website were extended by the teacher, I take the decision to make a full refactoring of this website ...
+		</p>
+		<br>
+		<br>
+  		<!-- blog entry -->
+		<h2 style="display:inline;">Sun, 07th May, 2017: <b>Launching the website</b></h2>
+		<p>
+			I started this HTML5, CSS3, Javascript website project for the Informatics course.
+		</p>
+		<br>
+		<br>
 	</div>
   </div>
 </div>
