--- a/proiect-html/project/about-us.html
+++ b/proiect-html/project/about-us.html
@@ -57,7 +57,7 @@
 	</div>
 	<a href="copyright.html" class="w3-bar-item w3-button">Copyright</a>
 </div>
-<div align="center"><h1 style="display:inline;">The students in our class, 2017</h1></div>
+<div align="center"><h1 style="display:inline;">The list of <b>students in our class</b>, 2017</h1></div>
 <div id="my-classroom" style="width:100%; height:80vh; overflow:hidden; display:none;">
 <ul>
 	<li><a href="#">VIII-A Class, CNER</a>
