--- a/proiect-html/project/about-us.html
+++ b/proiect-html/project/about-us.html
@@ -53,6 +53,7 @@
 		<button class="w3-button">Learning resources</button>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4">
 			<a href="learning-res-geometry-area.html" class="w3-bar-item w3-button">Geometry: Area Calculator</a>
+			<a href="learning-res-ro-lang-links.html" class="w3-bar-item w3-button">Romanian Language: Useful Links</a>
 		</div>
 	</div>
 	<a href="copyright.html" class="w3-bar-item w3-button">Copyright</a>
