--- a/proiect-html/project/blog.html
+++ b/proiect-html/project/blog.html
@@ -34,18 +34,19 @@
 		<button class="w3-button">Learning resources</button>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4">
 			<a href="learning-res-geometry-area.html" class="w3-bar-item w3-button">Geometry: Area Calculator</a>
+			<a href="learning-res-ro-lang-links.html" class="w3-bar-item w3-button">Romanian Language: Useful Links</a>
 		</div>
 	</div>
 	<a href="copyright.html" class="w3-bar-item w3-button">Copyright</a>
 </div>
 <br>
 <!-- page layout grid with 12 columns: 1 areas (12 columns) -->
-<div class="w3-row">
+<div class="w3-row" style="margin-left:25px; margin-right:25px;">
   <div class="w3-col w3-container m12 l12"><!-- column one -->
 	<div class="area-main">
-  		<h1 style="font-weight:bold;">Blog</h1>
-  		<br>
-  		<!-- blog entry -->
+		<h1 style="font-weight:bold;">Blog</h1>
+		<br>
+		<!-- blog entry -->
 		<h2 style="display:inline;">Fri, 26th May, 2017: <b>Just one month to the exam</b></h2>
 		<p>
 			We are learning, ... and learning ... but waiting the final party on 09th June ;)  !!! ... and of course for the exams: 19th and 21th June !
@@ -109,14 +110,14 @@
 		<br>
 		<br>
 		<br>
-  		<!-- blog entry -->
+		<!-- blog entry -->
 		<h2 style="display:inline;">Tue, 23th May, 2017: <b>Starting website refactoring</b></h2>
 		<p>
 			As the requirements for this website were extended by the teacher, I take the decision to make a full refactoring of this website ...
 		</p>
 		<br>
 		<br>
-  		<!-- blog entry -->
+		<!-- blog entry -->
 		<h2 style="display:inline;">Sun, 07th May, 2017: <b>Launching the website</b></h2>
 		<p>
 			I started this HTML5, CSS3, Javascript website project for the Informatics course.
