--- a/proiect-html/project/copyright.html
+++ b/proiect-html/project/copyright.html
@@ -27,6 +27,7 @@
 		<button class="w3-button">Learning resources</button>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4">
 			<a href="learning-res-geometry-area.html" class="w3-bar-item w3-button">Geometry: Area Calculator</a>
+			<a href="learning-res-ro-lang-links.html" class="w3-bar-item w3-button">Romanian Language: Useful Links</a>
 		</div>
 	</div>
 	<a href="#" class="w3-bar-item w3-button">Copyright</a>
@@ -52,7 +53,10 @@
 			<a href="https://www.w3schools.com/w3css/" target="_blank">w3.css - UI Toolkit</a>
 		</li>
 		<li>
-			<a href="https://jquery.com/" target="_blank">jQuery - JavaScript library</a>
+			<a href="https://jquery.com/" target="_blank">jQuery - cross-browser JavaScript library</a>
+		</li>
+		<li>
+			<a href="http://jquery.malsup.com/cycle2/" target="_blank">Cycle2 - Image FX Plugin for jQuery</a>
 		</li>
 		<li>
 			<a href="https://jqueryui.com/" target="_blank">jQuery UI - Js UI Widgets</a>
@@ -61,7 +65,7 @@
 			<a href="https://github.com/DmitryBaranovskiy/raphael" target="_blank">Raphaël.js: Cross-browser vector graphics</a>
 		</li>
 		<li>
-			<a href="https://github.com/kennethkufluk/js-mindmap" target="_blank">Js MindMap - A vector animated mindap</a>
+			<a href="https://github.com/kennethkufluk/js-mindmap" target="_blank">Js MindMap - A vector animated objects map</a>
 		</li>
 		<li>
 			<a href="https://github.com/unix-world/Smart.Framework.Modules/tree/master/mod-wflow-components/views/sci-widgets" target="_blank">JS Area Calculator</a>
