--- a/proiect-html/project/learning-res-geometry-area.html
+++ b/proiect-html/project/learning-res-geometry-area.html
@@ -19,7 +19,7 @@
 	</style>
 </head>
 <body>
-<!-- navigation menu: learning resources / area calculator triangle -->
+<!-- navigation menu: learning resources / geometry: area calculator triangle -->
 <div class="w3-bar w3-indigo">
 	<a href="index.html" class="w3-bar-item w3-button">Home</a>
 	<a href="about-us.html" class="w3-bar-item w3-button">About us</a>
@@ -28,6 +28,7 @@
 		<button class="w3-button">Learning resources</button>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4">
 			<a href="#" class="w3-bar-item w3-button">Geometry: Area Calculator</a>
+			<a href="learning-res-ro-lang-links.html" class="w3-bar-item w3-button">Romanian Language: Useful Links</a>
 		</div>
 	</div>
 	<a href="copyright.html" class="w3-bar-item w3-button">Copyright</a>
@@ -37,6 +38,7 @@
 <div class="w3-row" style="margin-left:25px; margin-right:25px;">
   <div class="w3-col w3-container m6 l6"><!-- column one -->
 	<div class="area-main">
+		<h1 style="font-weight:bold;">Learning Resources</h1>
 		<h2 style="display:inline;"><b>Geometry:</b> Area Calculator</h2>
 		<!-- Area Triangle: by Base and Height -->
 		<br>
